# space_story

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  lore1.json  lore2.json  lore3.json  lore4.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  theme.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/lore/: Cargo.toml
crates/lore/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs
crates/prompt/: Cargo.toml
crates/prompt/src/: lib.rs
crates/structs/: Cargo.toml
crates/structs/src/: lib.rs
lore-rag/: Cargo.toml  README.md
lore-rag/src/: embeddings.rs  lib.rs  parser.rs  retrieval.rs  types.rs
story-cli/: Cargo.toml
story-cli/src/: main.rs
