[package]
name = "lore-rag"
version = "0.3.0"
edition = "2021"
authors = ["Story Engine Contributors"]
description = "RAG engine for narrative lore: JSON ingestion, semantic embeddings, and vector search"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.3"
hnsw_rs = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokenizers = "0.22.1"

[lib]
name = "lore_rag"
path = "src/lib.rs"
